Name:                xmlhtml
Version:             0.1.5.2
Synopsis:            XML parser and renderer with HTML 5 quirks mode
Description:         Contains renderers and parsers for both XML and HTML 5
                     document fragments, which share data structures wo that
                     it's easy to work with both.  Document fragments are bits
                     of documents, which are not constrained by some of the
                     high-level structure rules (in particular, they may
                     contain more than one root element).
                     .
                     Note that this is not a compliant HTML 5 parser.  Rather,
                     it is a parser for HTML 5 compliant documents.  It does not
                     implement the HTML 5 parsing algorithm, and should
                     generally be expected to perform correctly only on
                     documents that you trust to conform to HTML 5.  This is
                     not a suitable library for implementing web crawlers or
                     other software that will be exposed to documents from
                     outside sources.  The result is also not the HTML 5
                     node structure, but rather something closer to the physical
                     structure.  For example, omitted start tags are not
                     inserted (and so, their corresponding end tags must also be
                     omitted).
License:             BSD3
License-file:        LICENSE
Author:              Chris Smith <cdsmith@gmail.com>
Maintainer:          Chris Smith <cdsmith@gmail.com>
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6

Extra-source-files:
             .ghci,
             extra/haddock.css,
             extra/hscolour.css,
             extra/logo.gif,
             haddock.sh,
             README,
             test/runTestsAndCoverage.sh,
             test/xmlhtml-testsuite.cabal,
             test/suite/TestSuite.hs
             test/suite/Text/XmlHtml/CursorTests.hs,
             test/suite/Text/XmlHtml/DocumentTests.hs,
             test/suite/Text/XmlHtml/OASISTest.hs,
             test/suite/Text/XmlHtml/TestCommon.hs,
             test/suite/Text/XmlHtml/Tests.hs,
             test/resources/ibm/ibm_oasis_invalid.xml,
             test/resources/ibm/ibm_oasis_not-wf.xml,
             test/resources/ibm/ibm_oasis_readme.txt,
             test/resources/ibm/ibm_oasis_valid.xml,
             test/resources/ibm/invalid/P28/ibm28i01.xml,
             test/resources/ibm/invalid/P28/out/ibm28i01.xml,
             test/resources/ibm/invalid/P29/ibm29i01.dtd,
             test/resources/ibm/invalid/P29/ibm29i01.xml,
             test/resources/ibm/invalid/P29/ibm29i01.xml.incorrect,
             test/resources/ibm/invalid/P29/out/ibm29i01.xml,
             test/resources/ibm/invalid/P32/ibm32i01.dtd,
             test/resources/ibm/invalid/P32/ibm32i01.xml,
             test/resources/ibm/invalid/P32/ibm32i02.dtd,
             test/resources/ibm/invalid/P32/ibm32i02.xml,
             test/resources/ibm/invalid/P32/ibm32i02.xml.incorrect,
             test/resources/ibm/invalid/P32/ibm32i03.dtd,
             test/resources/ibm/invalid/P32/ibm32i03.xml,
             test/resources/ibm/invalid/P32/ibm32i04.dtd,
             test/resources/ibm/invalid/P32/ibm32i04.xml,
             test/resources/ibm/invalid/P32/out/ibm32i01.xml,
             test/resources/ibm/invalid/P32/out/ibm32i02.xml,
             test/resources/ibm/invalid/P32/out/ibm32i03.xml,
             test/resources/ibm/invalid/P32/out/ibm32i04.xml,
             test/resources/ibm/invalid/P39/ibm39i01.xml,
             test/resources/ibm/invalid/P39/ibm39i02.xml,
             test/resources/ibm/invalid/P39/ibm39i03.xml,
             test/resources/ibm/invalid/P39/ibm39i04.xml,
             test/resources/ibm/invalid/P39/out/ibm39i01.xml,
             test/resources/ibm/invalid/P39/out/ibm39i02.xml,
             test/resources/ibm/invalid/P39/out/ibm39i03.xml,
             test/resources/ibm/invalid/P39/out/ibm39i04.xml,
             test/resources/ibm/invalid/P41/ibm41i01.xml,
             test/resources/ibm/invalid/P41/ibm41i02.xml,
             test/resources/ibm/invalid/P41/out/ibm41i01.xml,
             test/resources/ibm/invalid/P41/out/ibm41i02.xml,
             test/resources/ibm/invalid/P45/ibm45i01.xml,
             test/resources/ibm/invalid/P45/out/ibm45i01.xml,
             test/resources/ibm/invalid/P49/ibm49i01.dtd,
             test/resources/ibm/invalid/P49/ibm49i01.xml,
             test/resources/ibm/invalid/P49/ibm49i02.xml,
             test/resources/ibm/invalid/P49/out/ibm49i01.xml,
             test/resources/ibm/invalid/P49/out/ibm49i02.xml,
             test/resources/ibm/invalid/P50/ibm50i01.dtd,
             test/resources/ibm/invalid/P50/ibm50i01.xml,
             test/resources/ibm/invalid/P50/out/ibm50i01.xml,
             test/resources/ibm/invalid/P51/ibm51i01.dtd,
             test/resources/ibm/invalid/P51/ibm51i01.xml,
             test/resources/ibm/invalid/P51/ibm51i03.dtd,
             test/resources/ibm/invalid/P51/ibm51i03.xml,
             test/resources/ibm/invalid/P51/out/ibm51i01.xml,
             test/resources/ibm/invalid/P51/out/ibm51i02.xml,
             test/resources/ibm/invalid/P51/out/ibm51i03.xml,
             test/resources/ibm/invalid/P56/ibm56i01.xml,
             test/resources/ibm/invalid/P56/ibm56i02.xml,
             test/resources/ibm/invalid/P56/ibm56i03.xml,
             test/resources/ibm/invalid/P56/ibm56i05.xml,
             test/resources/ibm/invalid/P56/ibm56i06.xml,
             test/resources/ibm/invalid/P56/ibm56i07.xml,
             test/resources/ibm/invalid/P56/ibm56i08.xml,
             test/resources/ibm/invalid/P56/ibm56i09.xml,
             test/resources/ibm/invalid/P56/ibm56i10.xml,
             test/resources/ibm/invalid/P56/ibm56i11.xml,
             test/resources/ibm/invalid/P56/ibm56i12.xml,
             test/resources/ibm/invalid/P56/ibm56i13.xml,
             test/resources/ibm/invalid/P56/ibm56i14.xml,
             test/resources/ibm/invalid/P56/ibm56i15.xml,
             test/resources/ibm/invalid/P56/ibm56i16.xml,
             test/resources/ibm/invalid/P56/ibm56i17.xml,
             test/resources/ibm/invalid/P56/ibm56i18.xml,
             test/resources/ibm/invalid/P56/out/ibm56i01.xml,
             test/resources/ibm/invalid/P56/out/ibm56i02.xml,
             test/resources/ibm/invalid/P56/out/ibm56i03.xml,
             test/resources/ibm/invalid/P56/out/ibm56i05.xml,
             test/resources/ibm/invalid/P56/out/ibm56i06.xml,
             test/resources/ibm/invalid/P56/out/ibm56i07.xml,
             test/resources/ibm/invalid/P56/out/ibm56i08.xml,
             test/resources/ibm/invalid/P56/out/ibm56i09.xml,
             test/resources/ibm/invalid/P56/out/ibm56i10.xml,
             test/resources/ibm/invalid/P56/out/ibm56i11.xml,
             test/resources/ibm/invalid/P56/out/ibm56i12.xml,
             test/resources/ibm/invalid/P56/out/ibm56i13.xml,
             test/resources/ibm/invalid/P56/out/ibm56i14.xml,
             test/resources/ibm/invalid/P56/out/ibm56i15.xml,
             test/resources/ibm/invalid/P56/out/ibm56i16.xml,
             test/resources/ibm/invalid/P56/out/ibm56i17.xml,
             test/resources/ibm/invalid/P56/out/ibm56i18.xml,
             test/resources/ibm/invalid/P58/ibm58i01.xml,
             test/resources/ibm/invalid/P58/ibm58i02.xml,
             test/resources/ibm/invalid/P58/out/ibm58i01.xml,
             test/resources/ibm/invalid/P58/out/ibm58i02.xml,
             test/resources/ibm/invalid/P59/ibm59i01.xml,
             test/resources/ibm/invalid/P59/out/ibm59i01.xml,
             test/resources/ibm/invalid/P60/ibm60i01.xml,
             test/resources/ibm/invalid/P60/ibm60i02.xml,
             test/resources/ibm/invalid/P60/ibm60i03.xml,
             test/resources/ibm/invalid/P60/ibm60i04.xml,
             test/resources/ibm/invalid/P60/out/ibm60i01.xml,
             test/resources/ibm/invalid/P60/out/ibm60i02.xml,
             test/resources/ibm/invalid/P60/out/ibm60i03.xml,
             test/resources/ibm/invalid/P60/out/ibm60i04.xml,
             test/resources/ibm/invalid/P68/ibm68i01.dtd,
             test/resources/ibm/invalid/P68/ibm68i01.xml,
             test/resources/ibm/invalid/P68/ibm68i02.dtd,
             test/resources/ibm/invalid/P68/ibm68i02.xml,
             test/resources/ibm/invalid/P68/ibm68i03.ent,
             test/resources/ibm/invalid/P68/ibm68i03.xml,
             test/resources/ibm/invalid/P68/ibm68i04.ent,
             test/resources/ibm/invalid/P68/ibm68i04.xml,
             test/resources/ibm/invalid/P68/out/ibm68i01.xml,
             test/resources/ibm/invalid/P68/out/ibm68i02.xml,
             test/resources/ibm/invalid/P68/out/ibm68i03.xml,
             test/resources/ibm/invalid/P68/out/ibm68i04.xml,
             test/resources/ibm/invalid/P69/ibm69i01.dtd,
             test/resources/ibm/invalid/P69/ibm69i01.xml,
             test/resources/ibm/invalid/P69/ibm69i02.dtd,
             test/resources/ibm/invalid/P69/ibm69i02.xml,
             test/resources/ibm/invalid/P69/ibm69i03.ent,
             test/resources/ibm/invalid/P69/ibm69i03.xml,
             test/resources/ibm/invalid/P69/ibm69i04.ent,
             test/resources/ibm/invalid/P69/ibm69i04.xml,
             test/resources/ibm/invalid/P69/out/ibm69i01.xml,
             test/resources/ibm/invalid/P69/out/ibm69i02.xml,
             test/resources/ibm/invalid/P69/out/ibm69i03.xml,
             test/resources/ibm/invalid/P69/out/ibm69i04.xml,
             test/resources/ibm/invalid/P76/ibm76i01.xml,
             test/resources/ibm/invalid/P76/out/ibm76i01.xml,
             test/resources/ibm/not-wf/misc/432gewf.xml,
             test/resources/ibm/not-wf/misc/ltinentval.xml,
             test/resources/ibm/not-wf/misc/simpleltinentval.xml,
             test/resources/ibm/not-wf/P01/ibm01n01.xml,
             test/resources/ibm/not-wf/P01/ibm01n01.xml.correct,
             test/resources/ibm/not-wf/P01/ibm01n02.xml,
             test/resources/ibm/not-wf/P01/ibm01n03.xml,
             test/resources/ibm/not-wf/P01/ibm01n03.xml.correct,
             test/resources/ibm/not-wf/P02/ibm02n01.xml,
             test/resources/ibm/not-wf/P02/ibm02n02.xml,
             test/resources/ibm/not-wf/P02/ibm02n03.xml,
             test/resources/ibm/not-wf/P02/ibm02n04.xml,
             test/resources/ibm/not-wf/P02/ibm02n05.xml,
             test/resources/ibm/not-wf/P02/ibm02n06.xml,
             test/resources/ibm/not-wf/P02/ibm02n07.xml,
             test/resources/ibm/not-wf/P02/ibm02n08.xml,
             test/resources/ibm/not-wf/P02/ibm02n09.xml,
             test/resources/ibm/not-wf/P02/ibm02n10.xml,
             test/resources/ibm/not-wf/P02/ibm02n11.xml,
             test/resources/ibm/not-wf/P02/ibm02n12.xml,
             test/resources/ibm/not-wf/P02/ibm02n13.xml,
             test/resources/ibm/not-wf/P02/ibm02n14.xml,
             test/resources/ibm/not-wf/P02/ibm02n15.xml,
             test/resources/ibm/not-wf/P02/ibm02n16.xml,
             test/resources/ibm/not-wf/P02/ibm02n17.xml,
             test/resources/ibm/not-wf/P02/ibm02n18.xml,
             test/resources/ibm/not-wf/P02/ibm02n19.xml,
             test/resources/ibm/not-wf/P02/ibm02n20.xml,
             test/resources/ibm/not-wf/P02/ibm02n21.xml,
             test/resources/ibm/not-wf/P02/ibm02n22.xml,
             test/resources/ibm/not-wf/P02/ibm02n23.xml,
             test/resources/ibm/not-wf/P02/ibm02n24.xml,
             test/resources/ibm/not-wf/P02/ibm02n25.xml,
             test/resources/ibm/not-wf/P02/ibm02n26.xml,
             test/resources/ibm/not-wf/P02/ibm02n27.xml,
             test/resources/ibm/not-wf/P02/ibm02n28.xml,
             test/resources/ibm/not-wf/P02/ibm02n29.xml,
             test/resources/ibm/not-wf/P02/ibm02n30.xml,
             test/resources/ibm/not-wf/P02/ibm02n31.xml,
             test/resources/ibm/not-wf/P02/ibm02n32.xml,
             test/resources/ibm/not-wf/P02/ibm02n33.xml,
             test/resources/ibm/not-wf/P03/ibm03n01.xml,
             test/resources/ibm/not-wf/P04/ibm04n01.xml,
             test/resources/ibm/not-wf/P04/ibm04n02.xml,
             test/resources/ibm/not-wf/P04/ibm04n03.xml,
             test/resources/ibm/not-wf/P04/ibm04n04.xml,
             test/resources/ibm/not-wf/P04/ibm04n05.xml,
             test/resources/ibm/not-wf/P04/ibm04n06.xml,
             test/resources/ibm/not-wf/P04/ibm04n07.xml,
             test/resources/ibm/not-wf/P04/ibm04n08.xml,
             test/resources/ibm/not-wf/P04/ibm04n09.xml,
             test/resources/ibm/not-wf/P04/ibm04n10.xml,
             test/resources/ibm/not-wf/P04/ibm04n11.xml,
             test/resources/ibm/not-wf/P04/ibm04n12.xml,
             test/resources/ibm/not-wf/P04/ibm04n13.xml,
             test/resources/ibm/not-wf/P04/ibm04n14.xml,
             test/resources/ibm/not-wf/P04/ibm04n15.xml,
             test/resources/ibm/not-wf/P04/ibm04n16.xml,
             test/resources/ibm/not-wf/P04/ibm04n17.xml,
             test/resources/ibm/not-wf/P04/ibm04n18.xml,
             test/resources/ibm/not-wf/P05/ibm05n01.xml,
             test/resources/ibm/not-wf/P05/ibm05n02.xml,
             test/resources/ibm/not-wf/P05/ibm05n03.xml,
             test/resources/ibm/not-wf/P05/ibm05n04.xml,
             test/resources/ibm/not-wf/P05/ibm05n05.xml,
             test/resources/ibm/not-wf/P10/ibm10n01.xml,
             test/resources/ibm/not-wf/P10/ibm10n01.xml.html.correct,
             test/resources/ibm/not-wf/P10/ibm10n02.xml,
             test/resources/ibm/not-wf/P10/ibm10n02.xml.html.correct,
             test/resources/ibm/not-wf/P10/ibm10n03.xml,
             test/resources/ibm/not-wf/P10/ibm10n04.xml,
             test/resources/ibm/not-wf/P10/ibm10n05.xml,
             test/resources/ibm/not-wf/P10/ibm10n05.xml.html.correct,
             test/resources/ibm/not-wf/P10/ibm10n06.xml,
             test/resources/ibm/not-wf/P10/ibm10n06.xml.html.correct,
             test/resources/ibm/not-wf/P10/ibm10n07.xml,
             test/resources/ibm/not-wf/P10/ibm10n08.xml,
             test/resources/ibm/not-wf/P11/ibm11n01.xml,
             test/resources/ibm/not-wf/P11/ibm11n02.xml,
             test/resources/ibm/not-wf/P11/ibm11n03.xml,
             test/resources/ibm/not-wf/P11/ibm11n04.xml,
             test/resources/ibm/not-wf/P12/ibm12n01.xml,
             test/resources/ibm/not-wf/P12/ibm12n02.xml,
             test/resources/ibm/not-wf/P12/ibm12n03.xml,
             test/resources/ibm/not-wf/P14/ibm14n01.xml,
             test/resources/ibm/not-wf/P14/ibm14n01.xml.correct,
             test/resources/ibm/not-wf/P14/ibm14n02.xml,
             test/resources/ibm/not-wf/P14/ibm14n03.xml,
             test/resources/ibm/not-wf/P14/ibm14n03.xml.html.correct,
             test/resources/ibm/not-wf/P15/ibm15n01.xml,
             test/resources/ibm/not-wf/P15/ibm15n02.xml,
             test/resources/ibm/not-wf/P15/ibm15n03.xml,
             test/resources/ibm/not-wf/P15/ibm15n04.xml,
             test/resources/ibm/not-wf/P16/ibm16n01.xml,
             test/resources/ibm/not-wf/P16/ibm16n01.xml.correct,
             test/resources/ibm/not-wf/P16/ibm16n02.xml,
             test/resources/ibm/not-wf/P16/ibm16n03.xml,
             test/resources/ibm/not-wf/P16/ibm16n04.xml,
             test/resources/ibm/not-wf/P17/ibm17n01.xml,
             test/resources/ibm/not-wf/P17/ibm17n02.xml,
             test/resources/ibm/not-wf/P17/ibm17n03.xml,
             test/resources/ibm/not-wf/P17/ibm17n04.xml,
             test/resources/ibm/not-wf/P18/ibm18n01.xml,
             test/resources/ibm/not-wf/P18/ibm18n02.xml,
             test/resources/ibm/not-wf/P19/ibm19n01.xml,
             test/resources/ibm/not-wf/P19/ibm19n02.xml,
             test/resources/ibm/not-wf/P19/ibm19n03.xml,
             test/resources/ibm/not-wf/P20/ibm20n01.xml,
             test/resources/ibm/not-wf/P21/ibm21n01.xml,
             test/resources/ibm/not-wf/P21/ibm21n02.xml,
             test/resources/ibm/not-wf/P21/ibm21n03.xml,
             test/resources/ibm/not-wf/P22/ibm22n01.xml,
             test/resources/ibm/not-wf/P22/ibm22n02.xml,
             test/resources/ibm/not-wf/P22/ibm22n03.xml,
             test/resources/ibm/not-wf/P23/ibm23n01.xml,
             test/resources/ibm/not-wf/P23/ibm23n02.xml,
             test/resources/ibm/not-wf/P23/ibm23n03.xml,
             test/resources/ibm/not-wf/P23/ibm23n04.xml,
             test/resources/ibm/not-wf/P23/ibm23n05.xml,
             test/resources/ibm/not-wf/P23/ibm23n06.xml,
             test/resources/ibm/not-wf/P24/ibm24n01.xml,
             test/resources/ibm/not-wf/P24/ibm24n02.xml,
             test/resources/ibm/not-wf/P24/ibm24n03.xml,
             test/resources/ibm/not-wf/P24/ibm24n04.xml,
             test/resources/ibm/not-wf/P24/ibm24n05.xml,
             test/resources/ibm/not-wf/P24/ibm24n06.xml,
             test/resources/ibm/not-wf/P24/ibm24n07.xml,
             test/resources/ibm/not-wf/P24/ibm24n08.xml,
             test/resources/ibm/not-wf/P24/ibm24n09.xml,
             test/resources/ibm/not-wf/P25/ibm25n01.xml,
             test/resources/ibm/not-wf/P25/ibm25n02.xml,
             test/resources/ibm/not-wf/P26/ibm26n01.xml,
             test/resources/ibm/not-wf/P27/ibm27n01.xml,
             test/resources/ibm/not-wf/P28/ibm28n01.dtd,
             test/resources/ibm/not-wf/P28/ibm28n01.xml,
             test/resources/ibm/not-wf/P28/ibm28n02.xml,
             test/resources/ibm/not-wf/P28/ibm28n03.xml,
             test/resources/ibm/not-wf/P28/ibm28n04.xml,
             test/resources/ibm/not-wf/P28/ibm28n05.xml,
             test/resources/ibm/not-wf/P28/ibm28n05.xml.html.correct,
             test/resources/ibm/not-wf/P28/ibm28n06.xml,
             test/resources/ibm/not-wf/P28/ibm28n07.xml,
             test/resources/ibm/not-wf/P28/ibm28n08.xml,
             test/resources/ibm/not-wf/P30/ibm30n01.dtd,
             test/resources/ibm/not-wf/P30/ibm30n01.xml,
             test/resources/ibm/not-wf/P30/ibm30n01.xml.correct,
             test/resources/ibm/not-wf/P31/ibm31n01.dtd,
             test/resources/ibm/not-wf/P31/ibm31n01.xml,
             test/resources/ibm/not-wf/P31/ibm31n01.xml.correct,
             test/resources/ibm/not-wf/P32/ibm32n01.xml,
             test/resources/ibm/not-wf/P32/ibm32n02.xml,
             test/resources/ibm/not-wf/P32/ibm32n03.xml,
             test/resources/ibm/not-wf/P32/ibm32n04.xml,
             test/resources/ibm/not-wf/P32/ibm32n05.xml,
             test/resources/ibm/not-wf/P32/ibm32n06.dtd,
             test/resources/ibm/not-wf/P32/ibm32n06.xml,
             test/resources/ibm/not-wf/P32/ibm32n07.xml,
             test/resources/ibm/not-wf/P32/ibm32n08.xml,
             test/resources/ibm/not-wf/P39/ibm39n01.xml,
             test/resources/ibm/not-wf/P39/ibm39n02.xml,
             test/resources/ibm/not-wf/P39/ibm39n03.xml,
             test/resources/ibm/not-wf/P39/ibm39n04.xml,
             test/resources/ibm/not-wf/P39/ibm39n05.xml,
             test/resources/ibm/not-wf/P39/ibm39n06.xml,
             test/resources/ibm/not-wf/P39/ibm39n06.xml.correct,
             test/resources/ibm/not-wf/P40/ibm40n01.xml,
             test/resources/ibm/not-wf/P40/ibm40n02.xml,
             test/resources/ibm/not-wf/P40/ibm40n03.xml,
             test/resources/ibm/not-wf/P40/ibm40n04.xml,
             test/resources/ibm/not-wf/P40/ibm40n05.xml,
             test/resources/ibm/not-wf/P41/ibm41n.ent,
             test/resources/ibm/not-wf/P41/ibm41n01.xml,
             test/resources/ibm/not-wf/P41/ibm41n02.xml,
             test/resources/ibm/not-wf/P41/ibm41n03.xml,
             test/resources/ibm/not-wf/P41/ibm41n04.xml,
             test/resources/ibm/not-wf/P41/ibm41n05.xml,
             test/resources/ibm/not-wf/P41/ibm41n05.xml.html.correct,
             test/resources/ibm/not-wf/P41/ibm41n06.xml,
             test/resources/ibm/not-wf/P41/ibm41n07.xml,
             test/resources/ibm/not-wf/P41/ibm41n08.xml,
             test/resources/ibm/not-wf/P41/ibm41n09.xml,
             test/resources/ibm/not-wf/P41/ibm41n10.ent,
             test/resources/ibm/not-wf/P41/ibm41n10.xml,
             test/resources/ibm/not-wf/P42/ibm42n01.xml,
             test/resources/ibm/not-wf/P42/ibm42n02.xml,
             test/resources/ibm/not-wf/P42/ibm42n03.xml,
             test/resources/ibm/not-wf/P42/ibm42n04.xml,
             test/resources/ibm/not-wf/P42/ibm42n05.xml,
             test/resources/ibm/not-wf/P43/ibm43n01.xml,
             test/resources/ibm/not-wf/P43/ibm43n02.xml,
             test/resources/ibm/not-wf/P43/ibm43n04.xml,
             test/resources/ibm/not-wf/P43/ibm43n05.xml,
             test/resources/ibm/not-wf/P44/ibm44n01.xml,
             test/resources/ibm/not-wf/P44/ibm44n02.xml,
             test/resources/ibm/not-wf/P44/ibm44n03.xml,
             test/resources/ibm/not-wf/P44/ibm44n04.xml,
             test/resources/ibm/not-wf/P66/ibm66n01.xml,
             test/resources/ibm/not-wf/P66/ibm66n01.xml.correct,
             test/resources/ibm/not-wf/P66/ibm66n02.xml,
             test/resources/ibm/not-wf/P66/ibm66n02.xml.html.correct,
             test/resources/ibm/not-wf/P66/ibm66n03.xml,
             test/resources/ibm/not-wf/P66/ibm66n03.xml.correct,
             test/resources/ibm/not-wf/P66/ibm66n04.xml,
             test/resources/ibm/not-wf/P66/ibm66n04.xml.html.correct,
             test/resources/ibm/not-wf/P66/ibm66n05.xml,
             test/resources/ibm/not-wf/P66/ibm66n05.xml.correct,
             test/resources/ibm/not-wf/P66/ibm66n06.xml,
             test/resources/ibm/not-wf/P66/ibm66n06.xml.html.correct,
             test/resources/ibm/not-wf/P66/ibm66n07.xml,
             test/resources/ibm/not-wf/P66/ibm66n07.xml.correct,
             test/resources/ibm/not-wf/P66/ibm66n08.xml,
             test/resources/ibm/not-wf/P66/ibm66n08.xml.html.correct,
             test/resources/ibm/not-wf/P66/ibm66n09.xml,
             test/resources/ibm/not-wf/P66/ibm66n09.xml.correct,
             test/resources/ibm/not-wf/P66/ibm66n10.xml,
             test/resources/ibm/not-wf/P66/ibm66n10.xml.html.correct,
             test/resources/ibm/not-wf/P66/ibm66n11.xml,
             test/resources/ibm/not-wf/P66/ibm66n11.xml.correct,
             test/resources/ibm/not-wf/P66/ibm66n12.xml,
             test/resources/ibm/not-wf/P66/ibm66n13.xml,
             test/resources/ibm/not-wf/P66/ibm66n14.xml,
             test/resources/ibm/not-wf/P66/ibm66n15.xml,
             test/resources/ibm/not-wf/P68/ibm68n01.xml,
             test/resources/ibm/not-wf/P68/ibm68n01.xml.html.correct,
             test/resources/ibm/not-wf/P68/ibm68n02.xml,
             test/resources/ibm/not-wf/P68/ibm68n02.xml.html.correct,
             test/resources/ibm/not-wf/P68/ibm68n03.xml,
             test/resources/ibm/not-wf/P68/ibm68n03.xml.html.correct,
             test/resources/ibm/not-wf/P68/ibm68n04.xml,
             test/resources/ibm/not-wf/P68/ibm68n05.xml,
             test/resources/ibm/not-wf/P68/ibm68n06.dtd,
             test/resources/ibm/not-wf/P68/ibm68n06.xml,
             test/resources/ibm/not-wf/P68/ibm68n07.xml,
             test/resources/ibm/not-wf/P68/ibm68n07.xml.correct,
             test/resources/ibm/not-wf/P68/ibm68n08.xml,
             test/resources/ibm/not-wf/P68/ibm68n09.xml,
             test/resources/ibm/not-wf/P68/ibm68n10.xml,
             test/resources/ibm/not-wf/P75/empty.dtd,
             test/resources/ibm/not-wf/P75/ibm75n01.xml,
             test/resources/ibm/not-wf/P75/ibm75n01.xml.correct,
             test/resources/ibm/not-wf/P75/ibm75n02.xml,
             test/resources/ibm/not-wf/P75/ibm75n02.xml.html.correct,
             test/resources/ibm/not-wf/P75/ibm75n03.xml,
             test/resources/ibm/not-wf/P75/ibm75n03.xml.html.correct,
             test/resources/ibm/not-wf/P75/ibm75n04.xml,
             test/resources/ibm/not-wf/P75/ibm75n05.xml,
             test/resources/ibm/not-wf/P75/ibm75n05.xml.correct,
             test/resources/ibm/not-wf/P75/ibm75n06.xml,
             test/resources/ibm/not-wf/P75/ibm75n06.xml.correct,
             test/resources/ibm/not-wf/P75/ibm75n07.xml,
             test/resources/ibm/not-wf/P75/ibm75n08.xml,
             test/resources/ibm/not-wf/P75/ibm75n09.xml,
             test/resources/ibm/not-wf/P75/ibm75n10.xml,
             test/resources/ibm/not-wf/P75/ibm75n11.xml,
             test/resources/ibm/not-wf/P75/ibm75n12.xml,
             test/resources/ibm/not-wf/P75/ibm75n12.xml.correct,
             test/resources/ibm/not-wf/P75/ibm75n13.xml,
             test/resources/ibm/not-wf/P80/ibm80n01.xml,
             test/resources/ibm/not-wf/P80/ibm80n02.xml,
             test/resources/ibm/not-wf/P80/ibm80n03.xml,
             test/resources/ibm/not-wf/P80/ibm80n04.xml,
             test/resources/ibm/not-wf/P80/ibm80n05.xml,
             test/resources/ibm/not-wf/P80/ibm80n06.xml,
             test/resources/ibm/not-wf/P81/ibm81n01.xml,
             test/resources/ibm/not-wf/P81/ibm81n02.xml,
             test/resources/ibm/not-wf/P81/ibm81n03.xml,
             test/resources/ibm/not-wf/P81/ibm81n04.xml,
             test/resources/ibm/not-wf/P81/ibm81n05.xml,
             test/resources/ibm/not-wf/P81/ibm81n06.xml,
             test/resources/ibm/not-wf/P81/ibm81n07.xml,
             test/resources/ibm/not-wf/P81/ibm81n08.xml,
             test/resources/ibm/not-wf/P81/ibm81n09.xml,
             test/resources/ibm/valid/P01/ibm01v01.xml,
             test/resources/ibm/valid/P01/out/ibm01v01.xml,
             test/resources/ibm/valid/P02/ibm02v01.xml,
             test/resources/ibm/valid/P02/ibm02v01.xml.incorrect,
             test/resources/ibm/valid/P02/out/ibm02v01.xml,
             test/resources/ibm/valid/P03/ibm03v01.xml,
             test/resources/ibm/valid/P03/out/ibm03v01.xml,
             test/resources/ibm/valid/P11/ibm11v01.xml,
             test/resources/ibm/valid/P11/ibm11v02.xml,
             test/resources/ibm/valid/P11/ibm11v03.xml,
             test/resources/ibm/valid/P11/ibm11v04.xml,
             test/resources/ibm/valid/P11/out/ibm11v01.xml,
             test/resources/ibm/valid/P11/out/ibm11v02.xml,
             test/resources/ibm/valid/P11/out/ibm11v03.xml,
             test/resources/ibm/valid/P11/out/ibm11v04.xml,
             test/resources/ibm/valid/P11/student.dtd,
             test/resources/ibm/valid/P12/ibm12v01.xml,
             test/resources/ibm/valid/P12/ibm12v02.xml,
             test/resources/ibm/valid/P12/ibm12v03.xml,
             test/resources/ibm/valid/P12/ibm12v04.xml,
             test/resources/ibm/valid/P12/out/ibm12v01.xml,
             test/resources/ibm/valid/P12/out/ibm12v02.xml,
             test/resources/ibm/valid/P12/out/ibm12v03.xml,
             test/resources/ibm/valid/P12/out/ibm12v04.xml,
             test/resources/ibm/valid/P12/student.dtd,
             test/resources/ibm/valid/P13/ibm13v01.xml,
             test/resources/ibm/valid/P13/out/ibm13v01.xml,
             test/resources/ibm/valid/P13/student.dtd,
             test/resources/ibm/valid/P14/ibm14v01.xml,
             test/resources/ibm/valid/P14/ibm14v02.xml,
             test/resources/ibm/valid/P14/ibm14v03.xml,
             test/resources/ibm/valid/P14/out/ibm14v01.xml,
             test/resources/ibm/valid/P14/out/ibm14v02.xml,
             test/resources/ibm/valid/P14/out/ibm14v03.xml,
             test/resources/ibm/valid/P15/ibm15v01.xml,
             test/resources/ibm/valid/P15/ibm15v02.xml,
             test/resources/ibm/valid/P15/ibm15v03.xml,
             test/resources/ibm/valid/P15/ibm15v04.xml,
             test/resources/ibm/valid/P15/out/ibm15v01.xml,
             test/resources/ibm/valid/P15/out/ibm15v02.xml,
             test/resources/ibm/valid/P15/out/ibm15v03.xml,
             test/resources/ibm/valid/P15/out/ibm15v04.xml,
             test/resources/ibm/valid/P16/ibm16v01.xml,
             test/resources/ibm/valid/P16/ibm16v02.xml,
             test/resources/ibm/valid/P16/ibm16v03.xml,
             test/resources/ibm/valid/P16/out/ibm16v01.xml,
             test/resources/ibm/valid/P16/out/ibm16v02.xml,
             test/resources/ibm/valid/P16/out/ibm16v03.xml,
             test/resources/ibm/valid/P17/ibm17v01.xml,
             test/resources/ibm/valid/P17/out/ibm17v01.xml,
             test/resources/ibm/valid/P18/ibm18v01.xml,
             test/resources/ibm/valid/P18/out/ibm18v01.xml,
             test/resources/ibm/valid/P19/ibm19v01.xml,
             test/resources/ibm/valid/P19/out/ibm19v01.xml,
             test/resources/ibm/valid/P20/ibm20v01.xml,
             test/resources/ibm/valid/P20/ibm20v02.xml,
             test/resources/ibm/valid/P20/out/ibm20v01.xml,
             test/resources/ibm/valid/P20/out/ibm20v02.xml,
             test/resources/ibm/valid/P21/ibm21v01.xml,
             test/resources/ibm/valid/P21/out/ibm21v01.xml,
             test/resources/ibm/valid/P22/ibm22v01.xml,
             test/resources/ibm/valid/P22/ibm22v02.xml,
             test/resources/ibm/valid/P22/ibm22v03.xml,
             test/resources/ibm/valid/P22/ibm22v04.xml,
             test/resources/ibm/valid/P22/ibm22v05.xml,
             test/resources/ibm/valid/P22/ibm22v06.xml,
             test/resources/ibm/valid/P22/ibm22v07.xml,
             test/resources/ibm/valid/P22/out/ibm22v01.xml,
             test/resources/ibm/valid/P22/out/ibm22v02.xml,
             test/resources/ibm/valid/P22/out/ibm22v03.xml,
             test/resources/ibm/valid/P22/out/ibm22v04.xml,
             test/resources/ibm/valid/P22/out/ibm22v05.xml,
             test/resources/ibm/valid/P22/out/ibm22v06.xml,
             test/resources/ibm/valid/P22/out/ibm22v07.xml,
             test/resources/ibm/valid/P23/ibm23v01.xml,
             test/resources/ibm/valid/P23/ibm23v02.xml,
             test/resources/ibm/valid/P23/ibm23v03.xml,
             test/resources/ibm/valid/P23/ibm23v04.xml,
             test/resources/ibm/valid/P23/ibm23v05.xml,
             test/resources/ibm/valid/P23/ibm23v06.xml,
             test/resources/ibm/valid/P23/out/ibm23v01.xml,
             test/resources/ibm/valid/P23/out/ibm23v02.xml,
             test/resources/ibm/valid/P23/out/ibm23v03.xml,
             test/resources/ibm/valid/P23/out/ibm23v04.xml,
             test/resources/ibm/valid/P23/out/ibm23v05.xml,
             test/resources/ibm/valid/P23/out/ibm23v06.xml,
             test/resources/oasis/p02fail31.xml,
             test/resources/oasis/p02fail14.xml,
             test/resources/oasis/p01fail4.xml,
             test/resources/oasis/p39fail5.xml,
             test/resources/oasis/p66fail5.xml,
             test/resources/oasis/p32pass2.xml,
             test/resources/oasis/p03fail29.xml,
             test/resources/oasis/p32pass1.xml,
             test/resources/oasis/p30pass2.xml,
             test/resources/oasis/p04fail3.xml,
             test/resources/oasis/p02fail21.xml,
             test/resources/oasis/p18fail3.xml,
             test/resources/oasis/p01fail3.xml,
             test/resources/oasis/p02fail11.xml,
             test/resources/oasis/p02fail22.xml,
             test/resources/oasis/p14fail3.xml.correct,
             test/resources/oasis/p27pass2.xml,
             test/resources/oasis/p15fail3.xml,
             test/resources/oasis/p03fail20.xml,
             test/resources/oasis/p03fail22.xml,
             test/resources/oasis/p59pass1.xml,
             test/resources/oasis/p70pass1.xml,
             test/resources/oasis/p31pass2.dtd,
             test/resources/oasis/p16pass3.xml,
             test/resources/oasis/p03fail13.xml,
             test/resources/oasis/p22fail2.xml,
             test/resources/oasis/p23pass4.xml,
             test/resources/oasis/p44pass2.xml,
             test/resources/oasis/p02fail26.xml,
             test/resources/oasis/p42fail2.xml,
             test/resources/oasis/oasis.xml,
             test/resources/oasis/p43pass1.xml,
             test/resources/oasis/p72pass1.xml,
             test/resources/oasis/p66fail1.xml.html.correct,
             test/resources/oasis/p64pass1.dtd,
             test/resources/oasis/p28pass4.xml,
             test/resources/oasis/p02fail27.xml,
             test/resources/oasis/p56pass1.xml,
             test/resources/oasis/p23fail4.xml,
             test/resources/oasis/p28pass5.dtd,
             test/resources/oasis/p03fail8.xml,
             test/resources/oasis/p02fail23.xml,
             test/resources/oasis/p71pass1.xml,
             test/resources/oasis/p08fail1.xml,
             test/resources/oasis/p22pass3.xml,
             test/resources/oasis/p24pass2.xml,
             test/resources/oasis/p62pass1.dtd,
             test/resources/oasis/p23pass1.xml,
             test/resources/oasis/p40pass2.xml,
             test/resources/oasis/p02fail16.xml,
             test/resources/oasis/p43fail3.xml,
             test/resources/oasis/p29pass1.xml,
             test/resources/oasis/p05fail5.xml,
             test/resources/oasis/p22pass1.xml,
             test/resources/oasis/p44fail2.xml,
             test/resources/oasis/p73pass1.xml,
             test/resources/oasis/p31pass1.xml,
             test/resources/oasis/p03fail26.xml,
             test/resources/oasis/p26fail2.xml,
             test/resources/oasis/p18fail3.xml.correct,
             test/resources/oasis/p03fail21.xml,
             test/resources/oasis/p28fail1.xml.correct,
             test/resources/oasis/p22pass5.xml,
             test/resources/oasis/p39pass2.xml,
             test/resources/oasis/p55pass1.xml,
             test/resources/oasis/p39fail2.xml,
             test/resources/oasis/p24pass1.xml,
             test/resources/oasis/p44pass3.xml,
             test/resources/oasis/p15fail1.xml,
             test/resources/oasis/p10fail2.xml.html.correct,
             test/resources/oasis/p26pass1.xml,
             test/resources/oasis/p09pass1.xml,
             test/resources/oasis/p40fail1.xml,
             test/resources/oasis/p23fail5.xml,
             test/resources/oasis/p68fail2.xml.html.correct,
             test/resources/oasis/p24fail2.xml,
             test/resources/oasis/p10fail3.xml,
             test/resources/oasis/p43fail1.xml,
             test/resources/oasis/p03fail18.xml,
             test/resources/oasis/p01fail3.xml.correct,
             test/resources/oasis/p62pass1.xml,
             test/resources/oasis/p66fail3.xml.html.correct,
             test/resources/oasis/p44fail1.xml,
             test/resources/oasis/p03fail11.xml,
             test/resources/oasis/p02fail6.xml,
             test/resources/oasis/p28pass3.xml,
             test/resources/oasis/p25fail1.xml,
             test/resources/oasis/p14fail2.xml,
             test/resources/oasis/p68fail2.xml,
             test/resources/oasis/p06fail1.xml,
             test/resources/oasis/p01pass2.xml,
             test/resources/oasis/p01pass1.xml,
             test/resources/oasis/p41fail2.xml.html.correct,
             test/resources/oasis/p41pass2.xml,
             test/resources/oasis/p05fail3.xml,
             test/resources/oasis/p02fail28.xml,
             test/resources/oasis/p18pass1.xml,
             test/resources/oasis/p22pass6.xml,
             test/resources/oasis/p23fail2.xml,
             test/resources/oasis/p66fail4.xml,
             test/resources/oasis/p02fail1.xml,
             test/resources/oasis/p03fail3.xml,
             test/resources/oasis/p02fail15.xml,
             test/resources/oasis/p03fail15.xml,
             test/resources/oasis/p05fail2.xml,
             test/resources/oasis/p43fail2.xml,
             test/resources/oasis/p10fail2.xml,
             test/resources/oasis/p53pass1.xml,
             test/resources/oasis/p60pass1.xml,
             test/resources/oasis/p24pass3.xml,
             test/resources/oasis/p16fail2.xml,
             test/resources/oasis/p07pass1.xml,
             test/resources/oasis/p03fail9.xml,
             test/resources/oasis/p03fail27.xml,
             test/resources/oasis/p03fail28.xml,
             test/resources/oasis/p66fail3.xml,
             test/resources/oasis/p26fail1.xml,
             test/resources/oasis/p18fail1.xml,
             test/resources/oasis/p15fail2.xml,
             test/resources/oasis/p40pass1.xml,
             test/resources/oasis/p10fail1.xml,
             test/resources/oasis/p30pass2.dtd,
             test/resources/oasis/p40pass3.xml,
             test/resources/oasis/p22pass2.xml,
             test/resources/oasis/p66pass1.xml,
             test/resources/oasis/p03fail7.xml,
             test/resources/oasis/p03fail2.xml,
             test/resources/oasis/p03pass1.xml,
             test/resources/oasis/p32fail4.xml,
             test/resources/oasis/p50pass1.xml,
             test/resources/oasis/p40fail3.xml,
             test/resources/oasis/p41pass1.xml,
             test/resources/oasis/p27fail1.xml.correct,
             test/resources/oasis/p45pass1.xml,
             test/resources/oasis/p31pass2.xml,
             test/resources/oasis/p02fail17.xml,
             test/resources/oasis/p32fail2.xml,
             test/resources/oasis/p14fail1.xml,
             test/resources/oasis/p02fail30.xml,
             test/resources/oasis/p10fail1.xml.html.correct,
             test/resources/oasis/p40pass4.xml,
             test/resources/oasis/p32fail5.xml,
             test/resources/oasis/p68fail3.xml,
             test/resources/oasis/p03fail1.xml,
             test/resources/oasis/p03fail5.xml,
             test/resources/oasis/p74pass1.xml,
             test/resources/oasis/p22pass4.xml,
             test/resources/oasis/p58pass1.xml,
             test/resources/oasis/p14fail3.xml,
             test/resources/oasis/p02fail18.xml,
             test/resources/oasis/p76pass1.xml,
             test/resources/oasis/p63pass1.xml,
             test/resources/oasis/p03fail17.xml,
             test/resources/oasis/p15pass1.xml,
             test/resources/oasis/p63pass1.dtd,
             test/resources/oasis/p52pass1.xml,
             test/resources/oasis/p16fail3.xml,
             test/resources/oasis/p08fail2.xml,
             test/resources/oasis/p01fail1.xml,
             test/resources/oasis/p42fail1.xml,
             test/resources/oasis/p27pass3.xml,
             test/resources/oasis/p08pass1.xml,
             test/resources/oasis/p23fail1.xml,
             test/resources/oasis/p14fail2.xml.html.correct,
             test/resources/oasis/p66fail6.xml,
             test/resources/oasis/p49pass1.xml,
             test/resources/oasis/p23pass2.xml,
             test/resources/oasis/p68pass1.xml.incorrect,
             test/resources/oasis/p01pass3.xml,
             test/resources/oasis/p16pass1.xml,
             test/resources/oasis/p61pass1.dtd,
             test/resources/oasis/p30pass1.dtd,
             test/resources/oasis/p42pass1.xml,
             test/resources/oasis/p18fail2.xml,
             test/resources/oasis/p44pass4.xml,
             test/resources/oasis/p66fail2.xml.html.correct,
             test/resources/oasis/p28pass5.xml,
             test/resources/oasis/p57pass1.xml,
             test/resources/oasis/p02fail7.xml,
             test/resources/oasis/p02fail25.xml,
             test/resources/oasis/p30pass1.xml,
             test/resources/oasis/p66fail4.xml.html.correct,
             test/resources/oasis/p54pass1.xml,
             test/resources/oasis/p02fail13.xml,
             test/resources/oasis/p64pass1.xml,
             test/resources/oasis/p06pass1.xml,
             test/resources/oasis/p02fail10.xml,
             test/resources/oasis/p31pass1.dtd,
             test/resources/oasis/p11fail1.xml,
             test/resources/oasis/p66fail2.xml,
             test/resources/oasis/p22fail1.xml,
             test/resources/oasis/p02fail20.xml,
             test/resources/oasis/p39fail4.xml,
             test/resources/oasis/p68fail1.xml,
             test/resources/oasis/p03fail25.xml,
             test/resources/oasis/p28fail1.xml,
             test/resources/oasis/p02fail5.xml,
             test/resources/oasis/p46pass1.xml,
             test/resources/oasis/p02fail3.xml,
             test/resources/oasis/p44fail3.xml,
             test/resources/oasis/p14pass1.xml,
             test/resources/oasis/p03fail24.xml,
             test/resources/oasis/p10pass1.xml,
             test/resources/oasis/p16fail1.xml,
             test/resources/oasis/p27pass4.xml,
             test/resources/oasis/p25pass1.xml,
             test/resources/oasis/p02fail24.xml,
             test/resources/oasis/p28pass4.dtd,
             test/resources/oasis/p41fail3.xml,
             test/resources/oasis/p24pass4.xml,
             test/resources/oasis/p05fail1.xml,
             test/resources/oasis/p68fail3.xml.html.correct,
             test/resources/oasis/p02fail9.xml,
             test/resources/oasis/p68pass1.xml,
             test/resources/oasis/p01fail2.xml,
             test/resources/oasis/p42pass2.xml,
             test/resources/oasis/p24fail1.xml,
             test/resources/oasis/p41fail2.xml,
             test/resources/oasis/p68fail1.xml.html.correct,
             test/resources/oasis/p42fail3.xml,
             test/resources/oasis/p32fail3.xml,
             test/resources/oasis/p03fail19.xml,
             test/resources/oasis/p28pass1.xml,
             test/resources/oasis/p51pass1.xml,
             test/resources/oasis/p04fail2.xml,
             test/resources/oasis/p03fail16.xml,
             test/resources/oasis/p02fail29.xml,
             test/resources/oasis/p04fail1.xml,
             test/resources/oasis/p47pass1.xml,
             test/resources/oasis/p44pass5.xml,
             test/resources/oasis/p43pass1.xml.incorrect,
             test/resources/oasis/p02fail12.xml,
             test/resources/oasis/p03fail10.xml,
             test/resources/oasis/e2.xml,
             test/resources/oasis/p02fail19.xml,
             test/resources/oasis/p44fail4.xml,
             test/resources/oasis/p48pass1.xml,
             test/resources/oasis/p05pass1.xml,
             test/resources/oasis/p02fail4.xml,
             test/resources/oasis/p27pass1.xml,
             test/resources/oasis/p41fail1.xml.html.correct,
             test/resources/oasis/p12pass1.xml,
             test/resources/oasis/p39pass1.xml,
             test/resources/oasis/p11fail2.xml,
             test/resources/oasis/p44fail5.xml,
             test/resources/oasis/p05fail4.xml,
             test/resources/oasis/p75pass1.xml,
             test/resources/oasis/p03fail4.xml,
             test/resources/oasis/p03fail12.xml,
             test/resources/oasis/p16pass2.xml,
             test/resources/oasis/p09pass1.dtd,
             test/resources/oasis/p39fail1.xml,
             test/resources/oasis/p61pass1.xml,
             test/resources/oasis/p32fail1.xml,
             test/resources/oasis/p04pass1.xml,
             test/resources/oasis/p23fail3.xml,
             test/resources/oasis/p66fail1.xml,
             test/resources/oasis/p41fail1.xml,
             test/resources/oasis/p25pass2.xml,
             test/resources/oasis/p28pass2.xml,
             test/resources/oasis/p11pass1.xml,
             test/resources/oasis/p23pass3.xml,
             test/resources/oasis/p69pass1.xml,
             test/resources/oasis/p40fail2.xml,
             test/resources/oasis/p02fail2.xml,
             test/resources/oasis/p03fail23.xml,
             test/resources/oasis/p02fail8.xml,
             test/resources/oasis/p03fail14.xml,
             test/resources/oasis/p40fail4.xml,
             test/resources/oasis/p44pass1.xml,
             test/resources/oasis/p27fail1.xml

Library
  Hs-source-dirs:      src
  Exposed-modules:     Text.XmlHtml,
                       Text.XmlHtml.Cursor,
                       Text.Blaze.Renderer.XmlHtml
  Other-modules:       Text.XmlHtml.Common,
                       Text.XmlHtml.TextParser,
                       Text.XmlHtml.XML.Parse,
                       Text.XmlHtml.XML.Render,
                       Text.XmlHtml.HTML.Meta,
                       Text.XmlHtml.HTML.Parse,
                       Text.XmlHtml.HTML.Render
  Build-depends:       base == 4.*,
                       blaze-builder >= 0.2 && <0.4,
                       blaze-html >= 0.3.2 && < 0.5,
                       bytestring == 0.9.*,
                       containers >= 0.3 && <0.5,
                       parsec >= 3.0 && < 3.2,
                       text >= 0.11 && < 0.12

  Ghc-options:         -Wall -fwarn-tabs -fno-warn-orphans
