name:           xmlhtml-testsuite
version:        0.1.3
build-type:     Simple
cabal-version:  >= 1.6

Executable testsuite
  hs-source-dirs:  ../src suite
  main-is:         TestSuite.hs

  build-depends:
    HUnit                      == 1.2.*,
    directory                  >= 1.0      && <1.2,
    QuickCheck                 >= 2.3.0.2,
    base                       == 4.*,
    blaze-builder              >= 0.2      && <0.4,
    blaze-html                 >= 0.5      && <0.6,
    blaze-markup               >= 0.5      && <0.6,
    bytestring                 == 0.9.*,
    containers                 >= 0.3      && <0.5,
    parsec                     >= 3.1.2    && <3.2,
    test-framework             >= 0.6      && <0.7,
    test-framework-hunit       >= 0.2.7    && <0.3,
    test-framework-quickcheck2 >= 0.2.12.1 && <0.3,
    text                       >= 0.11     && <0.12,
    unordered-containers       >= 0.1.4    && <0.3

  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
