name:           xmlhtml-testsuite
version:        0.1.3
build-type:     Simple
cabal-version:  >= 1.6

Executable testsuite
  hs-source-dirs:  ../src suite
  main-is:         TestSuite.hs

  build-depends:
    HUnit                      == 1.2.*,
    directory                  >= 1.0      && <1.3,
    QuickCheck                 >= 2.3.0.2,
    base                       == 4.*,
    blaze-builder              >= 0.2      && <0.4,
    blaze-html                 >= 0.5      && <0.8,
    blaze-markup               >= 0.5      && <0.7,
    bytestring                 >= 0.9      && <0.11,
    containers                 >= 0.3      && <0.6,
    parsec                     >= 3.1.2    && <3.2,
    test-framework             >= 0.8.0.3  && <0.9,
    test-framework-hunit       >= 0.3      && <0.4,
    test-framework-quickcheck2 >= 0.3      && <0.4,
    text                       >= 0.11     && <1.2,
    unordered-containers       >= 0.1.4    && <0.3

  ghc-options: -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
