name:           xmlhtml-testsuite
version:        0.1.3
build-type:     Simple
cabal-version:  >= 1.6

Executable testsuite
  hs-source-dirs:  ../src suite
  main-is:         TestSuite.hs

  build-depends:
    HUnit                      >= 1.2      && <1.4,
    directory                  >= 1.0      && <1.3,
    QuickCheck                 >= 2.3.0.2,
    base,
    blaze-builder,
    blaze-html,
    blaze-markup,
    bytestring,
    containers,
    parsec,
    test-framework             >= 0.8.0.3  && <0.9,
    test-framework-hunit       >= 0.3      && <0.4,
    test-framework-quickcheck2 >= 0.3      && <0.4,
    text,
    unordered-containers

  ghc-options: -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
